--- a/app.html
+++ b/app.html
@@ -48,7 +48,7 @@
     <h3>CAMPAIGN SHORTCUTS</h3>
     <ul>
       <li ng-repeat="campaign in campaignList">
-        <a href="#/campaign/{{campaign.id}}" ng-bind="campaign.title" ng-click="toggleSidebar()"></a>
+        <a href="#/campaign/{{campaign.id}}/instances" ng-bind="campaign.title" ng-click="toggleSidebar()"></a>
       </li>
     </ul>
   </nav>
@@ -56,7 +56,7 @@
   <aside id="palette" ng-controller="panelCtr" view="panel">
     <header>
       <button ui-event="{click : 'togglePanel()'}" class="btn left">cancel</button>
-      <button class="btn right" ng-click="saveQuestion()"  ui-event="{click : 'togglePanel()'}">add question</button>
+      <button ng-show="panel=='Create Question'" class="btn right" ng-click="saveQuestion()"  ui-event="{click : 'togglePanel()'}">add question</button>
       <h1 ng-bind="panel"></h1>
     </header>
     <div class="content scroller">
@@ -102,7 +102,11 @@
         </div>
         
       </div>
-      <div ng-show="panel=='panel2'">This is panel 2.</div>
+      <div ng-show="panel=='share'">
+        <label for="share_email">Enter a friend's email to share your reward with them:</label>
+        <input type="email" name="share_email" placeholder="friend@email.com" />
+        <button class="btn" ng-click="togglePanel()">send!</button>
+      </div>
       <div ng-show="panel=='social_accounts'">This is where you would be a list of your connected social accounts.</div>
     </div>
   </aside>
