--- a/app.html
+++ b/app.html
@@ -15,7 +15,7 @@
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   
-  <script src="js/angular/angular.min.js" type="text/javascript"></script>
+  <script src="js/angular/angular_1.1.4.js" type="text/javascript"></script>
   <script src="js/angular/angular-ui-0.4/build/angular-ui.js" type="text/javascript"></script>
   <script src="js/angular/app.js" type="text/javascript"></script>
   <script src="js/angular/appControllers.js" type="text/javascript"></script>
@@ -34,21 +34,22 @@
 </head>
 <body>
   <main>
+    <div class="dimmer" ng-click="toggleSidebar('left')" ng-show="sidebar_visible" ng-animate="'fade'"></div>
     <div deepnav></div>
   </main>
   
   <nav id="sidebar" ng-controller="sidebarCtr" class="main_nav">
     <h3>ACCOUNT PAGES</h3>
     <ul>
-      <li><a href="#dashboard" ng-click="toggleSidebar()">Dashboard</a></li>
+      <li><a href="#dashboard" ng-click="toggleSidebar('left')">Dashboard</a></li>
       <li ng-repeat="(page, url) in appPages">
-        <a href="#/{{url}}" ng-click="toggleSidebar()" ng-bind='page'></a>
+        <a href="#/{{url}}" ng-click="toggleSidebar('left')" ng-bind='page'></a>
       </li>
     </ul>
     <h3>CAMPAIGN SHORTCUTS</h3>
     <ul>
       <li ng-repeat="campaign in campaignList">
-        <a href="#/campaign/{{campaign.id}}/instances" ng-bind="campaign.title" ng-click="toggleSidebar()"></a>
+        <a href="#/campaign/{{campaign.id}}/instances" ng-bind="campaign.title" ng-click="toggleSidebar('left')"></a>
       </li>
     </ul>
   </nav>
