--- a/app.html
+++ b/app.html
@@ -17,9 +17,6 @@
   
   <script src="js/angular/angular_1.1.4.js" type="text/javascript"></script>
   <script src="js/angular/angular-ui-0.4/build/angular-ui.js" type="text/javascript"></script>
-  <script src="js/angular/app.js" type="text/javascript"></script>
-  <script src="js/angular/appControllers.js" type="text/javascript"></script>
-  <script src="js/angular/appDirectives.js" type="text/javascript"></script>
   
   <script type='application/javascript' src='js/fastclick.js'></script>
   
@@ -112,5 +109,11 @@
     </div>
   </aside>
   
+  <!--App libraries-->
+  
+  <script src="js/angular/app.js" type="text/javascript"></script>
+  <script src="js/angular/appControllers.js" type="text/javascript"></script>
+  <script src="js/angular/appDirectives.js" type="text/javascript"></script>
+  <script src="js/angular/appFactories.js" type="text/javascript"></script>
 </body>
 </html>
