--- a/app.html
+++ b/app.html
@@ -15,24 +15,18 @@
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   
-  <script src="js/angular/angular_1.1.4.js" type="text/javascript"></script>
+  <script src="js/angular/angular_1.1.5.js" type="text/javascript"></script>
   <script src="js/angular/angular-ui-0.4/build/angular-ui.js" type="text/javascript"></script>
-  
-  <script type='application/javascript' src='js/fastclick.js'></script>
-  
-  <script type="text/javascript">
-    window.addEventListener('load', function() {
-        new FastClick(document.body);
-    }, false);
-  </script>
-  
+    
   <link rel="stylesheet" href="css/normalize.css" type="text/css" />
   <link rel="stylesheet" href="css/app.css" type="text/css" />
 </head>
 <body>
   <main>
-    <div class="dimmer" ng-click="toggleSidebar()" ng-show="sidebar_visible" ng-animate="'fade'"></div>
-    <div deepnav></div>
+    <div class="dimmer_clicker" ng-click="toggleSidebar()">
+      <div class="dimmer"  ng-show="sidebar_visible" ng-animate="'fade'" ></div>
+    </div>
+    <div ng-view ng-animate="'slide'"></div>
   </main>
   
   <nav ng-controller="sidebarCtr" class="main_nav sidebar">
@@ -52,12 +46,11 @@
   </nav>
   
   <nav ng-controller="sidebarCtr" class="second_nav sidebar">
-    <h3>ACCOUNT PAGES</h3>
+    <h3>CAMPAIGN PAGES</h3>
     <ul>
-      <li><a href="#dashboard" ng-click="toggleSidebar()">Dashboard</a></li>
-      <li ng-repeat="(page, url) in secondSidebar">
-        <a href="#/{{currentCampaignId}}/{{url}}" ng-click="toggleSidebar()" ng-bind='page'></a>
-      </li>
+      <li><a href="#/campaign/{{campaignId}}/analytics" ng-click="toggleSidebar()">Analytics</a></li>
+      <li><a href="#/campaign/{{campaignId}}/edit" ng-click="toggleSidebar()">edit</a></li>
+      <li><a href="#/campaign/{{campaignId}}/rewards" ng-click="toggleSidebar()">rewards</a></li>
     </ul>
   </nav>
   
@@ -65,7 +58,6 @@
   
   <script src="js/angular/app.js" type="text/javascript"></script>
   <script src="js/angular/appControllers.js" type="text/javascript"></script>
-  <script src="js/angular/appDirectives.js" type="text/javascript"></script>
   <script src="js/angular/appFactories.js" type="text/javascript"></script>
 </body>
 </html>
