--- a/app.html
+++ b/app.html
@@ -15,6 +15,8 @@
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   
+  <script src="js/sugar-1.3.9.min.js"></script>
+  
   <script src="js/angular/angular_1.1.5.js" type="text/javascript"></script>
   <script src="js/angular/angular-ui-0.4/build/angular-ui.js" type="text/javascript"></script>
     
@@ -51,6 +53,7 @@
       <li><a href="#/campaign/{{campaignId}}/analytics" ng-click="toggleSidebar()">Analytics</a></li>
       <li><a href="#/campaign/{{campaignId}}/edit" ng-click="toggleSidebar()">edit</a></li>
       <li><a href="#/campaign/{{campaignId}}/rewards" ng-click="toggleSidebar()">rewards</a></li>
+      <li><a href="#/campaign/{{campaignId}}/contacts" ng-click="toggleSidebar()">contacts</a></li>
     </ul>
   </nav>
   
