sped up animations. fixed dimmer animation. added archive functionality.

--- a/app.html
+++ b/app.html
@@ -29,7 +29,7 @@
   <div ng-controller="campaignCtr">
     <div id="main_view">
       <div ng-view ng-animate="'slide'"></div>
-      <div class="dimmer" ng-click="toggleSidebar()" ng-class="{visible: sidebar_visible == true}"></div>
+      <div class="dimmer" ng-click="toggleSidebar()" ng-class="{visible: sidebar_visible == true, in_frame: sidebar_inFrame == true}"></div>
     </div>
     
     <nav class="main_nav sidebar">
