--- a/app.html
+++ b/app.html
@@ -5,17 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Fdbk</title>
   
-  <script>
-  document.write('<script src=' +
-  ('__proto__' in {} ? 'js/zepto_rc1' : 'js/jquery_1.9.1') +
-  '.js><\/script>')
-  </script>
-  
   <!--[if lt IE 9]>
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   
   <script src="js/sugar-1.3.9.min.js"></script>
+  
+  <!-- jQuery UI Sortable -->
+  <script src="js/jqueryui/jquery_2.0.3.js" type="text/javascript"></script>
+  <script src="js/jqueryui/jquery.ui.core.min.js" type="text/javascript"></script>
+  <script src="js/jqueryui/jquery.ui.widget.min.js" type="text/javascript"></script>
+  <script src="js/jqueryui/jquery.ui.mouse.min.js" type="text/javascript"></script>
+  <script src="js/jqueryui/jquery.ui.sortable.min.js" type="text/javascript"></script>
+  <script src="js/jqueryui/jqueryui-touch.js" type="text/javascript"></script>
   
   <script src="js/angular/angular_1.1.5.js" type="text/javascript"></script>
   <script src="js/angular/angular-ui-0.4/build/angular-ui.js" type="text/javascript"></script>
@@ -75,5 +77,9 @@
   <script src="js/angular/app.js" type="text/javascript"></script>
   <script src="js/angular/appControllers.js" type="text/javascript"></script>
   <script src="js/angular/appFactories.js" type="text/javascript"></script>
+  
+  <script src="js/angular/sortable.js" type="text/javascript"></script>
+  
+
 </body>
 </html>
