--- a/app.html
+++ b/app.html
@@ -13,14 +13,10 @@
   
   <!-- jQuery UI Sortable -->
   <script src="js/jqueryui/jquery_2.0.3.js" type="text/javascript"></script>
-  <script src="js/jqueryui/jquery.ui.core.min.js" type="text/javascript"></script>
-  <script src="js/jqueryui/jquery.ui.widget.min.js" type="text/javascript"></script>
-  <script src="js/jqueryui/jquery.ui.mouse.min.js" type="text/javascript"></script>
-  <script src="js/jqueryui/jquery.ui.sortable.min.js" type="text/javascript"></script>
+  <script src="js/jqueryui/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
   <script src="js/jqueryui/jqueryui-touch.js" type="text/javascript"></script>
   
   <script src="js/angular/angular_1.1.5.js" type="text/javascript"></script>
-  <script src="js/angular/angular-ui-0.4/build/angular-ui.js" type="text/javascript"></script>
     
   <link rel="stylesheet" href="css/normalize.css" type="text/css" />
   <link rel="stylesheet" href="css/app.css" type="text/css" />
@@ -57,7 +53,7 @@
       </div>
             
       <ul>
-        <li><a href="#dashboard" ng-click="toggleSidebar()"><i class="icon-home"></i></a></li>
+        <li><a href="#dashboard" ng-click="toggleSidebar()"><i class="icon-home"></i>Dashboard</a></li>
         <li ng-repeat="campaign in campaignList">
           <a href="#/campaign/{{campaign.id}}/instances" ng-bind="campaign.title" ng-click="toggleSidebar()"></a>
         </li>
@@ -80,6 +76,7 @@
   
   <script src="js/angular/app.js" type="text/javascript"></script>
   <script src="js/angular/appControllers.js" type="text/javascript"></script>
+  <script src="js/angular/appDirectives.js" type="text/javascript"></script>
   <script src="js/angular/appFactories.js" type="text/javascript"></script>
   
   <script src="js/angular/sortable.js" type="text/javascript"></script>
