Working control panel and new message notifications.

--- a/app.html
+++ b/app.html
@@ -24,6 +24,9 @@
 </head>
 <body ng-controller="userCtr">
   
+  <div class="control_panel" ng-controller="controlPanelCtr" jq-draggable>
+    <button ng-click="receiveFdbk()">Receive Fdbk!</button>
+  </div>
   
   <div ng-controller="campaignCtr">
     <div id="main_view">
