'All Campaigns' dashboard is now working.

--- a/app.html
+++ b/app.html
@@ -58,7 +58,7 @@
         <li ng-repeat="account in accountList">
           <a href="#/account/{{account.id}}/dashboard" ng-click="toggleSidebar()">@<span ng-bind="account.handle"></span></a>
         </li>
-        <li><a href="#dashboard" ng-click="toggleSidebar()">All Campaigns</a></li>
+        <li><a href="#/account/all/dashboard" ng-click="toggleSidebar()">All Campaigns</a></li>
       </ul>
     </nav>
     
