"Receive Fdbk!" button works again.

--- a/app.html
+++ b/app.html
@@ -31,7 +31,7 @@
   <div>
     
     <div id="main_view">
-      <div ui-view ng-animate="'slide'"></div>
+      <div ui-view></div>
       <div class="dimmer" ng-click="toggleSidebar()" ng-class="{visible: sidebar_visible == true, in_frame: sidebar_inFrame == true}"></div>
     </div>
     
