--- a/app.html
+++ b/app.html
@@ -50,6 +50,6 @@
     <script src="js/angular/appDirectives.js" type="text/javascript"></script>
     <script src="js/angular/appFactories.js" type="text/javascript"></script>
     <script src="js/angular/directives/ui-sortable.js" type="text/javascript"></script>
-    <script src="js/angular/directives/ui-router.js" type="text/javascript"></script>
+    <script src="js/angular/directives/ui-router_0.2.js" type="text/javascript"></script>
   </body>
 </html>
