--- a/app.html
+++ b/app.html
@@ -18,31 +18,28 @@
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,200,600" rel="stylesheet" type="text/css">
   </head>
   <body ng-controller="userCtr">
-    <div ng-controller="controlPanelCtr" jq-draggable="jq-draggable" class="control_panel">
-      <button ng-click="receiveFdbk()">Receive Fdbk!</button>
+    <!-- .control_panel(ng-controller='controlPanelCtr', jq-draggable='jq-draggable')-->
+    <!--   button(ng-click='receiveFdbk()') Receive Fdbk!-->
+    <div ng-click="toggleSidebar()" ng-class="{visible: sidebar_visible == true, in_frame: sidebar_inFrame == true}" class="dimmer"></div>
+    <div class="main_wrapper">
+      <main ng-class="{slide_right : sidebar_visible}" ui-view class="main_view"></main>
     </div>
-    <div>
-      <div id="main_view">
-        <ui-view></ui-view>
-        <div ng-click="toggleSidebar()" ng-class="{visible: sidebar_visible == true, in_frame: sidebar_inFrame == true}" class="dimmer"></div>
-      </div>
-      <nav class="main_nav sidebar">
-        <div></div>
-        <div ng-class="{visible: personal_pages_visible == true}" class="personal_pages bounceInDown animated">
-          <h3>ACCOUNT PAGES</h3>
-          <ul>
-            <li ng-click="togglePersonalPages()"><a href="#/settings" ng-click="toggleSidebar()"><i class="icon-cog"></i>My Settings</a></li>
-            <li ng-click="togglePersonalPages()"><a href="#/rewards" ng-click="toggleSidebar()"><i class="icon-trophy"></i>My Rewards</a></li>
-            <li ng-click="togglePersonalPages()"><a href="#/history" ng-click="toggleSidebar()"><i class="icon-chat"></i>My Conversations</a></li>
-          </ul>
-        </div>
+    <nav class="main_nav sidebar">
+      <div ng-class="{visible: personal_pages_visible == true}" class="personal_pages bounceInDown animated">
+        <h3>ACCOUNT PAGES</h3>
         <ul>
-          <li><a ng-click="togglePersonalPages()">Personal Pages</a></li>
-          <li ng-repeat="account in accountList"><a href="#/account/{{account.id}}/dashboard" ng-click="toggleSidebar()">@<span ng-bind="account.handle"></span></a></li>
-          <li><a href="#/account/all/dashboard" ng-click="toggleSidebar()">All Campaigns</a></li>
+          <li ng-click="togglePersonalPages()"><a href="#/settings" ng-click="toggleSidebar()"><i class="icon-cog"></i>My Settings</a></li>
+          <li ng-click="togglePersonalPages()"><a href="#/rewards" ng-click="toggleSidebar()"><i class="icon-trophy"></i>My Rewards</a></li>
+          <li ng-click="togglePersonalPages()"><a href="#/history" ng-click="toggleSidebar()"><i class="icon-chat"></i>My Conversations</a></li>
         </ul>
-      </nav>
-    </div>
+      </div>
+      <ul ng-click="toggleSidebar()">
+        <li class="personal"><a ng-click="togglePersonalPages()">Personal Pages</a></li>
+        <li class="home"><a href="#/account/all/campaign/camp0+camp1+camp2/conversations">Home</a></li>
+        <li ng-repeat="account in accountList"><a href="#/account/{{account.id}}/dashboard">@<span ng-bind="account.handle"></span></a></li>
+        <li><a href="#/account/all/dashboard">All Campaigns</a></li>
+      </ul>
+    </nav>
     <!-- App libraries-->
     <script src="js/angular/app.js" type="text/javascript"></script>
     <script src="js/angular/appControllers.js" type="text/javascript"></script>
