--- a/app.html
+++ b/app.html
@@ -20,8 +20,8 @@
   <body ng-controller="userCtr">
     <!-- .control_panel(ng-controller='controlPanelCtr', jq-draggable='jq-draggable')-->
     <!--   button(ng-click='receiveFdbk()') Receive Fdbk!-->
-    <div ng-click="toggleSidebar()" ng-class="{visible: sidebar_visible == true, in_frame: sidebar_inFrame == true}" class="dimmer"></div>
     <div class="main_wrapper">
+      <div ng-click="toggleSidebar()" ng-if="sidebar_visible" class="dimmer main_dimmer"></div>
       <main ng-class="{slide_right : sidebar_visible}" ui-view class="main_view"></main>
     </div>
     <nav class="main_nav sidebar">
@@ -45,6 +45,7 @@
     <script src="js/angular/appControllers.js" type="text/javascript"></script>
     <script src="js/angular/appDirectives.js" type="text/javascript"></script>
     <script src="js/angular/appFactories.js" type="text/javascript"></script>
+    <script src="js/angular/directives/angular-animate.js" type="text/javascript"></script>
     <script src="js/angular/directives/ui-sortable.js" type="text/javascript"></script>
     <script src="js/angular/directives/ui-router_0.2.js" type="text/javascript"></script>
   </body>
