--- a/app.html
+++ b/app.html
@@ -25,19 +25,18 @@
     </div>
     <nav class="main_nav sidebar">      
       <ul>
-        <li><a ng-click="togglePersonalPages()">Personal Pages</a>
+        <li><a ng-click="togglePersonalPages()">Elliott Regan</a>
           <ul ng-if="personal_pages_visible" class="expando slide_down">
-            <li ng-click="togglePersonalPages()"><a href="#/settings" ng-click="toggleSidebar()"><i class="icon-cog"></i>My Settings</a></li>
-            <li ng-click="togglePersonalPages()"><a href="#/rewards" ng-click="toggleSidebar()"><i class="icon-trophy"></i>My Rewards</a></li>
-            <li ng-click="togglePersonalPages()"><a href="#/history" ng-click="toggleSidebar()"><i class="icon-chat"></i>My Conversations</a></li>
+            <li ng-click="togglePersonalPages()"><a href="#/settings" ng-click="toggleSidebar()"><i class="icon-cog"></i>Settings</a></li>
+            <li ng-click="togglePersonalPages()"><a href="#/rewards" ng-click="toggleSidebar()"><i class="icon-trophy"></i>Rewards</a></li>
+            <li ng-click="togglePersonalPages()"><a href="#/history" ng-click="toggleSidebar()"><i class="icon-chat"></i>Conversations</a></li>
           </ul>
         </li>
         <li class="home"><a href="#/account/all/campaign/camp0+camp1+camp2/conversations">Global Feed</a></li>
-        <li ng-repeat="account in accountList"><a href="#/account/{{account.id}}/dashboard"><span ng-bind="account.id"></span></a></li>
-        <li><a href="#/account/all/dashboard">All Campaigns</a></li>
+        <li ng-repeat="account in accountList" ng-class="{selected : accountId == account.id}"><a href="#/account/{{account.id}}/dashboard"><span ng-bind="account.id"></span></a></li>
       </ul>
       <div class="tools">
-        <button class="btn new_handle">Create new handle</button>
+        <button class="btn soft new_handle">+ Create new account</button>
       </div>
     </nav>
     <!-- App libraries-->
