--- a/app.html
+++ b/app.html
@@ -21,7 +21,9 @@
     <!-- .control_panel(ng-controller='controlPanelCtr', jq-draggable='jq-draggable')-->
     <!--   button(ng-click='receiveFdbk()') Receive Fdbk!-->
     <div class="main_wrapper">
-      <main ng-class="{slide_right : sidebar_visible}" ui-view class="main_view"></main>
+      <main ng-class="{slide_right : sidebar_visible}" class="main_view">
+        <ui-view class="fade"></ui-view>
+      </main>
     </div>
     <nav class="main_nav sidebar">      
       <ul>
@@ -32,8 +34,8 @@
             <li ng-click="togglePersonalPages()"><a href="#/history" ng-click="toggleSidebar()"><i class="icon-chat"></i>Conversations</a></li>
           </ul>
         </li>
-        <li class="home"><a href="#/account/all/campaign/camp0+camp1+camp2/conversations">Global Feed</a></li>
-        <li ng-repeat="account in accountList" ng-class="{selected : accountId == account.id}"><a href="#/account/{{account.id}}/dashboard"><span ng-bind="account.id"></span></a></li>
+        <li class="home"><a href="#/account/all/campaign/camp0+camp1+camp2/conversations" ng-click="toggleSidebar()">Global Feed</a></li>
+        <li ng-repeat="account in accountList" ng-class="{selected : accountId == account.id}"><a href="#/account/{{account.id}}/dashboard" ng-click="toggleSidebar()"><span ng-bind="account.id"></span></a></li>
       </ul>
       <div class="tools">
         <button class="btn soft new_handle">+ Create new account</button>
@@ -46,6 +48,6 @@
     <script src="js/angular/appFactories.js" type="text/javascript"></script>
     <script src="js/angular/directives/angular-animate.js" type="text/javascript"></script>
     <script src="js/angular/directives/ui-sortable.js" type="text/javascript"></script>
-    <script src="js/angular/directives/ui-router_0.2.js" type="text/javascript"></script>
+    <script src="js/angular/directives/angular-ui-router_for-1.2-animations.js" type="text/javascript"></script>
   </body>
 </html>
