Created a directive to handle the select dropdowns. Woo finally! Added a few new icons.

--- a/app.html
+++ b/app.html
@@ -48,6 +48,7 @@
     <script src="js/angular/appFactories.js" type="text/javascript"></script>
     <script src="js/angular/directives/angular-animate.js" type="text/javascript"></script>
     <script src="js/angular/directives/ui-sortable.js" type="text/javascript"></script>
+    <script src="js/angular/directives/select.js" type="text/javascript"></script>
     <script src="js/angular/directives/angular-ui-router_for-1.2-animations.js" type="text/javascript"></script>
   </body>
 </html>
