--- a/app.html
+++ b/app.html
@@ -30,7 +30,7 @@
         <li><a ng-click="togglePersonalPages()">Elliott Regan</a>
           <ul ng-if="personal_pages_visible" class="expando slide_down">
             <li ng-click="togglePersonalPages()"><a href="#/settings" ng-click="toggleSidebar()"><i class="icon-cog"></i>Settings</a></li>
-            <li ng-click="togglePersonalPages()"><a href="#/rewards" ng-click="toggleSidebar()"><i class="icon-trophy"></i>Rewards</a></li>
+            <li ng-click="togglePersonalPages()"><a href="#/rewards" ng-click="toggleSidebar()"><i class="icon-trophy"></i>Bonuses</a></li>
             <li ng-click="togglePersonalPages()"><a href="#/history" ng-click="toggleSidebar()"><i class="icon-chat"></i>Conversations</a></li>
           </ul>
         </li>
