--- a/app.html
+++ b/app.html
@@ -27,14 +27,14 @@
     </div>
     <nav class="main_nav sidebar">      
       <ul>
-        <li><a ng-click="togglePersonalPages()">Elliott Regan</a>
+        <li class="personal"><a ng-click="togglePersonalPages()">Elliott Regan</a>
           <ul ng-if="personal_pages_visible" class="expando slide_down">
-            <li ng-click="togglePersonalPages()"><a href="#/settings" ng-click="toggleSidebar()"><i class="icon-cog"></i>Settings</a></li>
-            <li ng-click="togglePersonalPages()"><a href="#/rewards" ng-click="toggleSidebar()"><i class="icon-trophy"></i>Bonuses</a></li>
-            <li ng-click="togglePersonalPages()"><a href="#/history" ng-click="toggleSidebar()"><i class="icon-chat"></i>Conversations</a></li>
+            <li ng-class="{selected : current_page == &quot;user_settings&quot;}"><a href="#/settings" ng-click="toggleSidebar()"><i class="icon-cog"></i>Settings</a></li>
+            <li ng-class="{selected : current_page == &quot;user_bonuses&quot;}"><a href="#/rewards" ng-click="toggleSidebar()"><i class="icon-trophy"></i>Bonuses</a></li>
+            <li ng-class="{selected : current_page == &quot;user_history&quot;}"><a href="#/history" ng-click="toggleSidebar()"><i class="icon-chat"></i>Conversations</a></li>
           </ul>
         </li>
-        <li class="home"><a href="#/account/all/campaign/camp0+camp1+camp2/conversations" ng-click="toggleSidebar()">Global Feed</a></li>
+        <li ng-class="{selected : accountId == &quot;all&quot;}" class="home"><a href="#/account/all/campaign/camp0+camp1+camp2/conversations" ng-click="toggleSidebar()">Global Feed</a></li>
         <li ng-repeat="account in accountList" ng-class="{selected : accountId == account.id}"><a href="#/account/{{account.id}}/dashboard" ng-click="toggleSidebar()"><span ng-bind="account.id"></span></a></li>
       </ul>
       <div class="tools">
