--- a/app.html
+++ b/app.html
@@ -20,27 +20,29 @@
   <body ng-controller="userCtr">
     <!-- .control_panel(ng-controller='controlPanelCtr', jq-draggable='jq-draggable')-->
     <!--   button(ng-click='receiveFdbk()') Receive Fdbk!-->
-    <div class="main_wrapper">
-      <main ng-class="{slide_right : sidebar_visible}" class="main_view">
-        <ui-view class="fade"></ui-view>
-      </main>
-    </div>
-    <nav class="main_nav sidebar">      
-      <ul>
-        <li class="personal"><a ng-click="togglePersonalPages()">Elliott Regan</a>
-          <ul ng-if="personal_pages_visible" class="expando slide_down">
-            <li ng-class="{selected : current_page == &quot;user_settings&quot;}"><a href="#/settings" ng-click="toggleSidebar()"><i class="icon-cog"></i>Settings</a></li>
-            <li ng-class="{selected : current_page == &quot;user_bonuses&quot;}"><a href="#/rewards" ng-click="toggleSidebar()"><i class="icon-trophy"></i>Bonuses</a></li>
-            <li ng-class="{selected : current_page == &quot;user_history&quot;}"><a href="#/history" ng-click="toggleSidebar()"><i class="icon-chat"></i>Conversations</a></li>
-          </ul>
-        </li>
-        <li ng-class="{selected : accountId == &quot;all&quot;}" class="home"><a href="#/account/all/campaign/camp0+camp1+camp2/conversations" ng-click="toggleSidebar()">Global Feed</a></li>
-        <li ng-repeat="account in accountList" ng-class="{selected : accountId == account.id}"><a href="#/account/{{account.id}}/dashboard" ng-click="toggleSidebar()"><span ng-bind="account.id"></span></a></li>
-      </ul>
-      <div class="tools">
-        <button class="btn soft new_handle">+ Create new account</button>
+    <div class="everything_wrapper">
+      <div class="main_wrapper">
+        <main ng-class="{slide_right : sidebar_visible}" class="main_view">
+          <ui-view class="fade"></ui-view>
+        </main>
       </div>
-    </nav>
+      <nav class="main_nav sidebar">      
+        <ul>
+          <li class="personal"><a ng-click="togglePersonalPages()">Elliott Regan</a>
+            <ul ng-if="personal_pages_visible" class="expando slide_down">
+              <li ng-class="{selected : current_page == &quot;user_settings&quot;}"><a href="#/settings" ng-click="toggleSidebar()"><i class="icon-cog"></i>Settings</a></li>
+              <li ng-class="{selected : current_page == &quot;user_bonuses&quot;}"><a href="#/rewards" ng-click="toggleSidebar()"><i class="icon-trophy"></i>Bonuses</a></li>
+              <li ng-class="{selected : current_page == &quot;user_history&quot;}"><a href="#/history" ng-click="toggleSidebar()"><i class="icon-chat"></i>Conversations</a></li>
+            </ul>
+          </li>
+          <li ng-class="{selected : accountId == &quot;all&quot;}" class="home"><a href="#/account/all/campaign/camp0+camp1+camp2/conversations" ng-click="toggleSidebar()">Global Feed</a></li>
+          <li ng-repeat="account in accountList" ng-class="{selected : accountId == account.id}"><a href="#/account/{{account.id}}/dashboard" ng-click="toggleSidebar()"><span ng-bind="account.id"></span></a></li>
+        </ul>
+        <div class="tools">
+          <button class="btn soft new_handle">+ Create new account</button>
+        </div>
+      </nav>
+    </div>
     <!-- App libraries-->
     <script src="js/angular/app.js"></script>
     <script src="js/angular/appControllers.js"></script>
@@ -51,7 +53,7 @@
     <script src="js/angular/directives/select.js"></script>
     <script src="js/d3.js"></script>
     <script src="js/nvd3/nv.d3.js"></script>
-    <link src="js/nvd3/nv.d3.css">
+    <link rel="stylesheet" href="js/nvd3/nv.d3.css">
     <script src="js/angularjs-nvd3/dist/angularjs-nvd3-directives.js"></script>
     <script src="js/angular/directives/angular-ui-router_for-1.2-animations.js"></script>
   </body>
